# lms-kokoro-gui

./: Cargo.toml  LICENSE  README.md  config.json  settings.json  tokenizer.json  tokenizer_config.json
src/: consonant.rs  contractions.rs  heteronyms.rs  main.rs  numbers.rs  tts.rs  vowels.rs
src/backups/: espeak.rs
