[package]
name = "kokoro"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.140"
futures-util = "0.3.31"
eframe = "0.30.0"
futures = "0.3.31"
openai-api-rs = "6.0.0"
bincode = { version = "2.0.1", features = ["serde"] }
syntect = "5.0"
tts = "0.26.3"
simple_transcribe_rs = "1.0.1"
cpal = "0.15.3"
hound = "3.5.1"
rfd = "0.15.3"
image = { version = "0.23.14", features = ["png"] }
base64 = "0.21"
cmudict-fast = "0.8.0"
log = "0.4.26"
ndarray = "0.16.1"
ort = "2.0.0-rc.9"
once_cell = "1.17.1"
pin-project = "1.1.9"

lazy_static = "1.4.0"
rustfft = "6.2"
num-complex = "0.4"

regex = "1.11.1"
rodio = { version = "0.20.1", default-features = false, features = ["wav"] }
anyhow = "1.0.98"
# $env:LIBCLANG_PATH = "C:\Program Files\Microsoft Visual Studio\2022\Community\VC\Tools\Llvm\x64\lib"